# GSoC-2023

./: .example.ftw.yaml  .gitignore  MEETING_NOTE.md  README.md  cleanup.sh  example.env  pyproject.toml  test.py
.github/workflows/: performance_test.yml  regression_test.yml
config/: cAdvisor.threshold.json  ftw.threshold.json
rules/: REQUEST-920-PROTOCOL-ENFORCEMENT.conf  RESPONSE-955-WEB-SHELLS.conf
src/: README.md  collect.py  report.py  test.py  threshold.py  type.py
src/cAdvisor/: collector.py  parser.py  test_cadvisor_collector.py
src/ftw/: collector.py  test_ftw_collector.py
src/interface/: DataFormat.py  FTWTestSchema.py  IDataCollector.py  IUtil.py  test_DataFormat.py  test_IDataCollector.py  test_IUtil.py
src/locust/: collector.py
src/model/: CAdvisorUtil.py  CollectCommandArg.py  FTWUtil.py  IUtil.py  LocustUtil.py  ParsedDataItem.py  ReportCommandArg.py  Threshold.py  Util.py  __init__.py
src/type/: ChangedRule.py  CollectCommandArg.py  Mode.py  ReportCommandArg.py  ReportFormat.py  State.py  UtilType.py  __init__.py
src/utils/: __init__.py  cAdvisor.py  const.py  fn.py  ftw.py  loader.py  locust.py  logger.py  test_cadvisor_collector.py  test_const.py  test_ftw_collector.py  utils.py
src/visualizer/: main.py
tests/: docker-compose.yml-e
