[tool.poetry]
name = "crs-performance"
version = "0.1.0"
description = "GSoC 2023 - CRS Performance"
authors = ["dextermallo <dextermallo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
