[tool.poetry]
name = "crs-performance"
version = "0.1.0"
description = "GSoC 2023 - CRS Performance"
authors = ["dextermallo <dextermallo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
requests = "^2.31.0"
matplotlib = "^3.7.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [".", "./src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
collect-cAdvisor = 'src.cAdvisor.collector:main'
visualize = 'src.visualizer.main:main'
collect-ftw = 'src.ftw.collector:main'